--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -17,6 +17,10 @@
   width: 100%;
 }
 
+.playkit-fullscreen .playkit-bumper-container {
+  height: 100%;
+}
+
 .playkit-bumper-container video {
   width: 100%;
   height: 100%;
