--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -15,6 +15,7 @@
   visibility: hidden;
   position: absolute;
   width: 100%;
+  min-height: 100%;
 }
 
 .playkit-fullscreen .playkit-bumper-container {
