--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -17,11 +17,8 @@
   min-height: 100%;
 }
 
-.playkit-fullscreen .playkit-bumper-container {
-  height: 100%;
-}
-
 .playkit-bumper-container video {
+  position: absolute;
   background-color: rgb(0, 0, 0);
   width: 100%;
   height: 100%;
