--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,9 +2,10 @@
   z-index: 1;
 }
 
-.playkit-bumper-cover, .playkit-bumper-click-through {
+.playkit-bumper-cover,
+.playkit-bumper-click-through {
   position: absolute;
-  top :0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
